force-app/main/default/objects/Forecaster__c/Forecaster__c.object-meta.xml
<CustomObject>
    <label>Forecaster</label>
    <nameField>
        <label>Forecaster</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecasters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>