force-app/main/default/objects/Forecaster__c/fields/additive_terms_upper__c.field-meta.xml
<CustomField>
    <fullName>additive_terms_upper__c</fullName>
    <label>additive_terms_upper</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>