force-app/main/default/objects/Forecaster__c/fields/anomaly__c.field-meta.xml
<CustomField>
    <fullName>anomaly__c</fullName>
    <label>anomaly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>