force-app/main/default/objects/Forecaster__c/fields/anomaly_weight__c.field-meta.xml
<CustomField>
    <fullName>anomaly_weight__c</fullName>
    <label>anomaly_weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>