force-app/main/default/objects/Forecaster__c/fields/ds__c.field-meta.xml
<CustomField>
    <fullName>ds__c</fullName>
    <label>ds</label>
    <type>DateTime</type>
</CustomField>