force-app/main/default/objects/Forecaster__c/fields/externalid__c.field-meta.xml
<CustomField>
    <fullName>externalid__c</fullName>
    <description>Used to reference an ID from backend</description>
    <externalId>true</externalId>
    <inlineHelpText>Used  to reference an ID from backend</inlineHelpText>
    <label>externalid</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>