force-app/main/default/objects/Forecaster__c/fields/fact__c.field-meta.xml
<CustomField>
    <fullName>fact__c</fullName>
    <label>fact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>