force-app/main/default/objects/Forecaster__c/fields/limitname__c.field-meta.xml
<CustomField>
    <fullName>limitname__c</fullName>
    <label>Measure Config</label>
    <referenceTo>MeasureConfig__c</referenceTo>
    <relationshipLabel>Forecasters</relationshipLabel>
    <relationshipName>Forecasters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>