force-app/main/default/objects/Forecaster__c/fields/max_limit__c.field-meta.xml
<CustomField>
    <fullName>max_limit__c</fullName>
    <label>max_limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>