force-app/main/default/objects/Forecaster__c/fields/multiplicative_terms_upper__c.field-meta.xml
<CustomField>
    <fullName>multiplicative_terms_upper__c</fullName>
    <label>multiplicative_terms_upper</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>