force-app/main/default/objects/Forecaster__c/fields/trend__c.field-meta.xml
<CustomField>
    <fullName>trend__c</fullName>
    <label>trend</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>