force-app/main/default/objects/Forecaster__c/fields/trend_lower__c.field-meta.xml
<CustomField>
    <fullName>trend_lower__c</fullName>
    <label>trend_lower</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>