force-app/main/default/objects/Forecaster__c/fields/trend_upper__c.field-meta.xml
<CustomField>
    <fullName>trend_upper__c</fullName>
    <label>trend_upper</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>