force-app/main/default/objects/Forecaster__c/fields/yhat__c.field-meta.xml
<CustomField>
    <fullName>yhat__c</fullName>
    <label>yhat</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>