force-app/main/default/objects/Forecaster__c/fields/yhat_lower__c.field-meta.xml
<CustomField>
    <fullName>yhat_lower__c</fullName>
    <label>yhat_lower</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>