force-app/main/default/objects/Forecaster__c/fields/yhat_upper__c.field-meta.xml
<CustomField>
    <fullName>yhat_upper__c</fullName>
    <label>yhat_upper</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>